# sudoku

./: .editorconfig  .gitignore  LICENSE  Makefile  PUZZLE_FORMAT.md  README.md  REVIEW_FINDINGS.md  install-hooks.sh  release.config.cjs  sudoku.cabal
.github/workflows/: checks.yml  ci.yml  publish.yml  release.yml
app/: Main.hs
puzzles/: README.md
puzzles/invalid/: invalid-4x4-box-contradiction.sdk  invalid-4x4-late-contradiction.sdk  invalid-4x4-multiple-solutions.sdk
puzzles/valid-symbol-variants/: classic-9x9-easy-arrows-ee8c9ee7c26d23a3.sdk  classic-9x9-easy-birds-b79e0bf9654b90f8.sdk  classic-9x9-easy-faces-6820cf6d903ac453.sdk  classic-9x9-easy-georgian-fe9be435e5e6a156.sdk  classic-9x9-easy-hearts-ef238f68dacf06e7.sdk  classic-9x9-easy-hebrew-a4de6e14dc120c4d.sdk  classic-9x9-easy-khmer-93daf7a9115c2ae1.sdk  classic-9x9-easy-runes-31b346fc9c75b524.sdk  classic-9x9-easy-sports-balls-7e22c42e6afd305c.sdk  classic-9x9-easy-tifinagh-4dd15c03eabb2226.sdk  classic-9x9-easy-vegetables-8c63d88503d9b489.sdk  classic-9x9-hard-armenian-ca843bf7f165f259.sdk  classic-9x9-hard-arrows-3706d27bdf0355a0.sdk  classic-9x9-hard-bengali-6884c8b2f97d2ca7.sdk  classic-9x9-hard-cyrillic-f29bf2f9a877ccef.sdk  classic-9x9-hard-faces-78c93ee6c4ff3fc9.sdk  classic-9x9-hard-fruits-91018e45aa0f99ed.sdk  classic-9x9-hard-hand-gestures-585669f0f5407995.sdk  classic-9x9-hard-hearts-4a66f1ae0ccb011e.sdk  classic-9x9-hard-lao-29345706d9bdce12.sdk  classic-9x9-hard-plants-ce743109fa41715a.sdk  classic-9x9-medium-animal-faces-90a448f93fd7ebff.sdk  classic-9x9-medium-bengali-0c883beb8dad4095.sdk  classic-9x9-medium-birds-19fb8360cd8e88ba.sdk  classic-9x9-medium-faces-0f62bbb6dde5f621.sdk  classic-9x9-medium-greek-849e22bdaa015158.sdk  classic-9x9-medium-hiragana-2819daad187d39d1.sdk  classic-9x9-medium-kanji-50ef9877e7d28ecd.sdk  classic-9x9-medium-plants-2e677c2396ab5407.sdk  classic-9x9-medium-zodiac-6db882bb3d700c28.sdk
puzzles/valid/16x16/: classic-16x16-easy-0764110e3644d1c72462e718f974548f.sdk  classic-16x16-easy-3138bbca035bbe9f7aadd24e16493a30.sdk  classic-16x16-easy-45744577531eef78d7a5a1c4180c54f8.sdk  classic-16x16-easy-4fd8381bc3332aa66db91d29d3c390b4.sdk  classic-16x16-easy-54a9ea3bcae8d3d04813f812db6f86fc.sdk  classic-16x16-easy-6c652104a10842864a6b3d6453c57e05.sdk  classic-16x16-easy-6f1e51531be8a5caad2dee987ac6723f.sdk  classic-16x16-easy-765e7d90e3d59fcee5113712bd7f6bb2.sdk  classic-16x16-easy-797a3166fb5fa5bf322ce31fd7244bb1.sdk  classic-16x16-easy-81000a6bb3d558fd0bacd20ab120fec9.sdk  classic-16x16-easy-9e9bb35fcf26ccb9cf31aa83a070a557.sdk  classic-16x16-easy-a1633697569b2efe327de8a583c6f0d4.sdk  classic-16x16-easy-ba346c49d9bb1c259d4e58de00b37445.sdk  classic-16x16-easy-c7ae457f11b7bad312f09124d72900d9.sdk  classic-16x16-easy-eeab6a9f683c9a6841ef3bb890d91632.sdk  classic-16x16-expert-048403ce43958823.sdk  classic-16x16-expert-0cbe923fa4089483.sdk  classic-16x16-expert-25cc1b2adb4a0bd4.sdk  classic-16x16-expert-30d2235b6f486c8a.sdk  classic-16x16-expert-644c6df87f3838f6.sdk  classic-16x16-expert-b73c0cb0a99362f0.sdk  classic-16x16-expert-bad2950bd66a143f.sdk  classic-16x16-expert-cb1950116a317c2b.sdk  classic-16x16-expert-d33a1402ab5bb496.sdk  classic-16x16-expert-e2fff77ce6666391.sdk  classic-16x16-extreme-159dc2810b6d9f86.sdk  classic-16x16-extreme-2e03c59ef729bc66.sdk  classic-16x16-extreme-3a347d14102216a2.sdk  classic-16x16-extreme-4b3bbf236e8cc475.sdk  classic-16x16-extreme-5d21d8230bccf009.sdk  classic-16x16-extreme-6cfa4a3b9860be41.sdk  classic-16x16-extreme-a3e599f778c5ea04.sdk  classic-16x16-extreme-cba89134e4026655.sdk  classic-16x16-extreme-e0f844bc098388af.sdk  classic-16x16-extreme-f1cf30dbca7337f6.sdk  classic-16x16-hard-089cd0f6b8b03b85e1381cd55a96a139.sdk  classic-16x16-hard-0dcc247cc4210644.sdk  classic-16x16-hard-1bf98f45e1b20208.sdk  classic-16x16-hard-48056db42d780c0b.sdk  classic-16x16-hard-8ba4489da108a059c8d33530229f1912.sdk  (+25 more)
puzzles/valid/25x25/: classic-25x25-easy-05ff774ef8a58cf438d9f8cc9422a184.sdk  classic-25x25-easy-3236343f9a247e8cf844485f360bb79a.sdk  classic-25x25-easy-3349eb442555aa287053c75ae3209695.sdk  classic-25x25-easy-4164f6300eca033f8bf561e4489b4d47.sdk  classic-25x25-easy-42593fd72a35434813765e4a847e8baa.sdk  (+30 more)
src/: HelloWorld.hs
src/Sudoku/: Geometry.hs  Grid.hs  Placements.hs  PuzzleBuilder.hs  PuzzleParser.hs  PuzzleSolver.hs  Symbols.hs  Units.hs
sudokus/: sudoku-easy-4x4-header.txt  sudoku-easy-4x4-noheader.txt
test/: Main.hs
test/Sudoku/: GeometrySpec.hs  GridSpec.hs  PuzzleBuilderSpec.hs  PuzzleParserSpec.hs  PuzzleSolverSpec.hs  SymbolsSpec.hs  TestHelpers.hs  UnitsSpec.hs
(+244 files in other folders)
