cabal-version:      3.16
name:               sudoku
version:            0.1.0.0
license:            NONE
author:             Christian Pflugradt
maintainer:         110765548+christianpflugradt@users.noreply.github.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints

executable sudoku
    import: warnings
    main-is: Main.hs
    hs-source-dirs: app, src
    build-depends:
        base ^>=4.22.0.0
    default-language: Haskell2010
    other-modules: HelloWorld

test-suite sudoku-tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test, src
    build-depends:
        base ^>=4.22.0.0,
        tasty,
        tasty-hunit
    default-language: Haskell2010
    other-modules: HelloWorld