cabal-version:      3.16
name:               sudoku
version:            0.1.0.0
license:            MIT
author:             Christian Pflugradt
maintainer:         110765548+christianpflugradt@users.noreply.github.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints

library
    import: warnings
    hs-source-dirs: src
    exposed-modules:
        Sudoku.Grid
    build-depends:
        base ^>=4.22.0.0,
        containers,
        array
    default-language: Haskell2010
    default-extensions:
        LambdaCase,
        TupleSections

executable sudoku
    import: warnings
    main-is: Main.hs
    hs-source-dirs: app
    build-depends:
        base ^>=4.22.0.0,
        sudoku
    default-language: Haskell2010

test-suite sudoku-tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:
        base ^>=4.22.0.0,
        containers,
        sudoku,
        tasty,
        tasty-hunit
    default-language: Haskell2010
    default-extensions:
        LambdaCase,
        TupleSections
    other-modules:
        Sudoku.GridSpec
        Sudoku.TestHelpers
