cabal-version:      3.0
name:               sudoku
version:            0.1.0.0
license:            MIT
author:             Christian Pflugradt
maintainer:         110765548+christianpflugradt@users.noreply.github.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints

library
    import: warnings
    hs-source-dirs: src
    exposed-modules:
        Sudoku.App.Options
        Sudoku.App.Render
        Sudoku.App.Runner
        Sudoku.Geometry
        Sudoku.Grid
        Sudoku.IO.File
        Sudoku.Math.IntegerRoots
        Sudoku.Placements
        Sudoku.PuzzleBuilder
        Sudoku.PuzzleParser
        Sudoku.Solver.HiddenSingleStrategy
        Sudoku.Solver.NakedSingleStrategy
        Sudoku.Solver.PuzzleSolver
        Sudoku.Solver.Strategy
        Sudoku.Symbols
    build-depends:
        base >=4.18 && <4.23,
        containers,
        array,
        directory,
        filepath,
        time
    default-language: Haskell2010
    default-extensions:
        LambdaCase,
        TupleSections

executable sudoku
    import: warnings
    main-is: Main.hs
    hs-source-dirs: app
    build-depends:
        base >=4.18 && <4.23,
        sudoku
    default-language: Haskell2010
    default-extensions:
        LambdaCase,
        TupleSections

test-suite sudoku-tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:
        base >=4.18 && <4.23,
        containers,
        directory,
        filepath,
        sudoku,
        tasty,
        tasty-hunit
    default-language: Haskell2010
    default-extensions:
        LambdaCase,
        TupleSections
    other-modules:
        Sudoku.GeometrySpec,
        Sudoku.GridSpec,
        Sudoku.Math.IntegerRootsSpec,
        Sudoku.PuzzleBuilderSpec,
        Sudoku.PuzzleParserSpec,
        Sudoku.Solver.HiddenSingleStrategySpec,
        Sudoku.Solver.NakedSingleStrategySpec,
        Sudoku.Solver.PuzzleSolverSpec,
        Sudoku.SymbolsSpec,
        Sudoku.Integration.ValidPuzzlesSpec,
        Sudoku.TestHelpers
